# Grafika

./: .gitignore  BRZI_START_TEST.md  CMAKE_BUILD_GUIDE.md  CMakeLists.txt  COLLISION_FIX_REPORT.md  CROSSHAIR_SIMPLIFIED.md  CROSSHAIR_SIMPLIFIED_QUICK_TEST.md  CURSOR_CROSSHAIR_FIX.md  CURSOR_CROSSHAIR_QUICK_TEST.md  DALJE.md  DOOR_ANIMATION_COMPLETE.md  GEOMETRY_COLLISION_FIX.md  HALL_GEOMETRY_QUICK_TEST.md  HALL_GEOMETRY_UPDATE.md  Kostur.vcxproj  Kostur.vcxproj.filters  LIGHTING_FIX.md  LIGHTING_FIX_SUMMARY.md  PHASE0_COMPLETE.md  PHASE10_COMPLETE.md  PHASE11_COMPLETE.md  PHASE11_QUICKSTART.md  PHASE11_SUMMARY.md  PHASE11_TEST_CHECKLIST.md  PHASE12_COMPLETE.md  PHASE12_SUMMARY.md  PHASE1_COMPLETE.md  PHASE2_AUDIT_REPORT.md  PHASE2_COMPLETE.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE2_VISUAL_TEST_GUIDE.md  PHASE3_COMPLETE.md  PHASE3_QUICK_TEST.md  PHASE3_README.md  PHASE3_SUMMARY.md  PHASE4_COMPLETE.md  PHASE4_QUICK_TEST.md  PHASE4_README.md  PHASE4_SUMMARY.md  PHASE5_COMPLETE.md  (+34 more)
Assets/Shaders/: hud.frag  hud.vert  human.frag  phong.frag  screen.frag  screen.vert
Header/: AABB.h  AppState.h  AppTime.h  Application.h  Camera.h  Crosshair.h  DebugCube.h  Door.h  FrameLimiter.h  HUD.h  HumanMesh.h  Input.h  Light.h  Log.h  PeopleManager.h  Person.h  Ray.h  RayPicker.h  Scene.h  Screen.h  Seat.h  SeatGrid.h  SeatMesh.h  Util.h  Window.h
Source/: AppTime.cpp  Application.cpp  Camera.cpp  Crosshair.cpp  DebugCube.cpp  Door.cpp  FrameLimiter.cpp  HUD.cpp  HumanMesh.cpp  Input.cpp  Log.cpp  Main.cpp  PeopleManager.cpp  Person.cpp  RayPicker.cpp  Scene.cpp  Screen.cpp  SeatGrid.cpp  SeatMesh.cpp  Util.cpp  Window.cpp
modeli/: chair.mtl
